# Good-Bot

./: .gitignore  Bot.py  Data.db  config.ini  cookies.txt  pyproject.toml  requirements.txt  run.py
.github/workflows/: black.yml
cogs/: cookies.txt  hangman.py  knockjokes.py  music.py  time_related.py
source/cogs/: fun.py  time_related.py
src/: foaas.py  main_bot.py
src/cogs/: fun.py  hangman.py  health_form.py  music.py  reddit.py  time_related.py
