[tool.poetry]
name = "good bot"
version = "0.1.0"
description = ""
authors = ["IrishBumfuzzle"]

[tool.poetry.dependencies]
python = "^3.9"
youtube-search-python = "^1.5.3"
yt-dlp = "^2021.12.27"
Flask = "^2.0.2"
disnake = {extras = ["voice"], version = "^2.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
